Fix: overflow sidebar up and albums layout

--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,7 @@ main {
 }
 
 section {
+    padding: 15px;
     /* debug */
     height: 250px;
     background-color: chartreuse;
@@ -112,8 +113,10 @@ section {
 }
 
 .col {
-    width: calc(100% / 6);
+    width: calc(100% / 6 - 15px);
     height: 100px;
+    margin-right: 15px;
+    margin-top: 15px;
     border: 1px solid black;
 }
 
@@ -142,6 +145,9 @@ body {
 }
 
 /* sidebar up */
+.sidebar .up {
+    overflow-y: auto;
+}
 .logo {
     width: 65%;
     margin: 15px;
